# pokerBot

./: .gitignore  pyproject.toml
scripts/: generate_deck.py
src/: main.py  poker.py  ui.py
